[package]
name = "remote_jupyter"
version = "0.1.0"
edition = "2021"
license = "MIT"
keywords = ["science"]
categories = ["command-line-utilities", "science"]
repository = "https://github.com/vsbuffalo/remote_jupyter"
description = "Manage multiple Jupyter sessions running on remote servers through SSH tunneling."

[[bin]]
name = "rjy"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.2", features = ["derive"] }
dirs = "5.0.1"
nix = { version = "0.27.1", features = ["signal"] }
prettytable-rs = { version = "0.10.0", default-features = false }
serde = "1.0.188"
serde_derive = "1.0.188"
serde_yaml = "0.9.25"
ssh2 = "0.9.4"
term = "0.7.0"
url = "2.4.1"
